--- a/style.css
+++ b/style.css
@@ -447,6 +447,7 @@ body {
     flex-shrink: 0;
     width: 72px;
     height: 72px;
+    aspect-ratio: 1 / 1;
     border-radius: 18px;
     overflow: hidden;
     display: grid;
